--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,6 +1,6 @@
 <div class="side-bar-header">
-　<div class="header-name">
-　　<a href="#">Tom</a>
+  <div class="header-name">
+   <a href="#">Tom</a>
   </div>
   <div class="create-room">
     <a href="#">チャットを作成する</a>
@@ -8,8 +8,7 @@
 </div>
 
 <div class="rooms">
- 
- <div class="room">
+  <div class="room">
     <div class="room-name">
       <a href="#">room1</a>
     </div>
@@ -19,5 +18,19 @@
       <a href="#">room2</a>
     </div>
   </div>
-  
 </div>
+
+<!--
+<div class="side_header">
+  <p>Tom</p>
+  <div><a>chat</a></div>
+</div>
+
+<div class="rooms">
+  <div class="room">
+    <a>room1</a>
+  </div>
+
+  <div class="room">room2</div>
+</div>
+-->
